@@ -85,6 +85,45 @@ static int	get_net_stat(const char *if_name, net_stat_t *result)
 	return ret;
 }
 
+/******************************************************************************
+ *                                                                            *
+ * Function: proc_read_file                                                   *
+ *                                                                            *
+ * Purpose: reads whole file into a buffer in a single read operation         *
+ *                                                                            *
+ * Parameters: filename     - [IN] the file to read                           *
+ *             buffer       - [IN/OUT] the output buffer                      *
+ *             buffer_alloc - [IN/OUT] the output buffer size                 *
+ *                                                                            *
+ * Return value: -1 error occurred during reading                             *
+ *                0 empty file (shouldn't happen)                             *
+ *               >0 the number of bytes read                                  *
+ *                                                                            *
+ * Comments: When reading line by line the file might be changed between      *
+ *           reads resulting in a possible information loss. To avoid it      *
+ *           try reading/expanding the buffer until it fits the whole file.   *
+ *                                                                            *
+ ******************************************************************************/
+static int	proc_read_file(const char *filename, char **buffer, int *buffer_alloc)
+{
+	int	n, fd;
+
+	if (-1 == (fd = open(filename, O_RDONLY)))
+		return -1;
+
+	while (*buffer_alloc == (n = read(fd, *buffer, *buffer_alloc)))
+	{
+		*buffer_alloc *= 2;
+		*buffer = zbx_realloc(*buffer, *buffer_alloc);
+
+		lseek(fd, 0, SEEK_SET);
+	}
+
+	close(fd);
+
+	return n;
+}
+
 int	NET_IF_IN(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
 	net_stat_t	ns;
@@ -232,11 +271,10 @@ int	NET_IF_DISCOVERY(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 int	NET_TCP_LISTEN(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
-	FILE		*f = NULL;
-	char		tmp[MAX_STRING_LEN], pattern[64], *port_str;
+	char		pattern[64], *port_str, *buffer = NULL;
 	unsigned short	port;
 	zbx_uint64_t	listen = 0;
-	int		ret = SYSINFO_RET_FAIL;
+	int		ret = SYSINFO_RET_FAIL, n, buffer_alloc = 64 * ZBX_KIBIBYTE;
 
 	if (1 < request->nparam)
 		return SYSINFO_RET_FAIL;
@@ -246,39 +284,37 @@ int	NET_TCP_LISTEN(AGENT_REQUEST *request, AGENT_RESULT *result)
 	if (NULL == port_str || SUCCEED != is_ushort(port_str, &port))
 		return SYSINFO_RET_FAIL;
 
-	if (NULL != (f = fopen("/proc/net/tcp", "r")))
+	buffer = zbx_malloc(NULL, buffer_alloc);
+
+	if (0 < (n = proc_read_file("/proc/net/tcp", &buffer, &buffer_alloc)))
 	{
+		ret = SYSINFO_RET_OK;
+
 		zbx_snprintf(pattern, sizeof(pattern), "%04X 00000000:0000 0A", (unsigned int)port);
 
-		while (NULL != fgets(tmp, sizeof(tmp), f))
-		{
-			if (NULL != strstr(tmp, pattern))
-			{
-				listen = 1;
-				break;
-			}
-		}
-		zbx_fclose(f);
+		buffer[n] = '\0';
 
-		ret = SYSINFO_RET_OK;
+		if (NULL != strstr(buffer, pattern))
+		{
+			listen = 1;
+			goto out;
+		}
 	}
 
-	if (0 == listen && NULL != (f = fopen("/proc/net/tcp6", "r")))
+	if (0 < (n = proc_read_file("/proc/net/tcp6", &buffer, &buffer_alloc)))
 	{
-		zbx_snprintf(pattern, sizeof(pattern), "%04X 00000000000000000000000000000000:0000 0A", (unsigned int)port);
-
-		while (NULL != fgets(tmp, sizeof(tmp), f))
-		{
-			if (NULL != strstr(tmp, pattern))
-			{
-				listen = 1;
-				break;
-			}
-		}
-		zbx_fclose(f);
-
 		ret = SYSINFO_RET_OK;
+
+		zbx_snprintf(pattern, sizeof(pattern), "%04X 00000000000000000000000000000000:0000 0A",
+				(unsigned int)port);
+
+		buffer[n] = '\0';
+
+		if (NULL != strstr(buffer, pattern))
+			listen = 1;
 	}
+out:
+	zbx_free(buffer);
 
 	SET_UI64_RESULT(result, listen);
 
@@ -287,11 +323,10 @@ int	NET_TCP_LISTEN(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 int	NET_UDP_LISTEN(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
-	FILE		*f = NULL;
-	char		tmp[MAX_STRING_LEN], pattern[64], *port_str;
+	char		pattern[64], *port_str, *buffer = NULL;
 	unsigned short	port;
 	zbx_uint64_t	listen = 0;
-	int		ret = SYSINFO_RET_FAIL;
+	int		ret = SYSINFO_RET_FAIL, n, buffer_alloc = 64 * ZBX_KIBIBYTE;
 
 	if (1 < request->nparam)
 		return SYSINFO_RET_FAIL;
@@ -301,39 +336,37 @@ int	NET_UDP_LISTEN(AGENT_REQUEST *request, AGENT_RESULT *result)
 	if (NULL == port_str || SUCCEED != is_ushort(port_str, &port))
 		return SYSINFO_RET_FAIL;
 
-	if (NULL != (f = fopen("/proc/net/udp", "r")))
+	buffer = zbx_malloc(NULL, buffer_alloc);
+
+	if (0 < (n = proc_read_file("/proc/net/udp", &buffer, &buffer_alloc)))
 	{
+		ret = SYSINFO_RET_OK;
+
 		zbx_snprintf(pattern, sizeof(pattern), "%04X 00000000:0000 07", (unsigned int)port);
 
-		while (NULL != fgets(tmp, sizeof(tmp), f))
-		{
-			if (NULL != strstr(tmp, pattern))
-			{
-				listen = 1;
-				break;
-			}
-		}
-		zbx_fclose(f);
+		buffer[n] = '\0';
 
-		ret = SYSINFO_RET_OK;
+		if (NULL != strstr(buffer, pattern))
+		{
+			listen = 1;
+			goto out;
+		}
 	}
 
-	if (0 == listen && NULL != (f = fopen("/proc/net/udp6", "r")))
+	if (0 < (n = proc_read_file("/proc/net/udp6", &buffer, &buffer_alloc)))
 	{
-		zbx_snprintf(pattern, sizeof(pattern), "%04X 00000000000000000000000000000000:0000 07", (unsigned int)port);
-
-		while (NULL != fgets(tmp, sizeof(tmp), f))
-		{
-			if (NULL != strstr(tmp, pattern))
-			{
-				listen = 1;
-				break;
-			}
-		}
-		zbx_fclose(f);
-
 		ret = SYSINFO_RET_OK;
+
+		zbx_snprintf(pattern, sizeof(pattern), "%04X 00000000000000000000000000000000:0000 07",
+				(unsigned int)port);
+
+		buffer[n] = '\0';
+
+		if (NULL != strstr(buffer, pattern))
+			listen = 1;
 	}
+out:
+	zbx_free(buffer);
 
 	SET_UI64_RESULT(result, listen);
 
